Väiksed muudatused faili lugemises ja kirjutamises, Aveli abiga tegime muudatusi vormistuses ja testisime programmi tööd